--- a/style.css
+++ b/style.css
@@ -30,3 +30,13 @@ body {
     border-color: #09507c;
     background-color: #deedf2;
   }
+
+  .message {
+color: rgb(33, 16, 19);
+border: 2px solid rgb(202, 52, 52);
+margin: auto;
+padding: 20px;
+width: 400px;
+text-align: center;
+
+  }
